--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
+    "@tabler/icons-react": "^2.47.0",
     "@tanstack/react-router": "^1.16.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
