--- a/.prettierrc
+++ b/.prettierrc
@@ -9,5 +9,5 @@
   "endOfLine": "lf",
   "jsxSingleQuote": false,
   "arrowParens": "always",
-  "plugins": ["prettier-plugin-organize-imports"]
+  "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-tailwindcss"]
 }
